Refactor GrantPermissions front-end and Add contact attribute to grant admins (#982)
* Add contact to grant_permission, grant

* Add :contact trait to grant permission factory

* Add contact info to Grant show page

* Include contacts in Grant find

* Move role descriptions to select options

* Add :contact to permitted params

* Tweaks to grant permission form display

* Include contact info on submission page

* Update to latest version of turbo-rails

* Move On/Off boolean string translations to I18n, add Yes/No translation

* Make grant permission editing inline via turbo

* continue Make grant permission editing inline via turbo

* Tweak css on contact card

* Add tom-select for type to select

* Import, override tom-select css

* Add tom-select stimulus controller

* Switch to tom-select in new permission form

* Use turbo for all grant permission actions

--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -182,6 +182,7 @@ th,
   font-size: .85em;
   font-weight: bold;
   text-align: left;
+  padding: .25em 0;
   vertical-align: bottom;
 }
 
@@ -254,7 +255,8 @@ h2#section {
 }
 
 // grant dates
-#grant-dates {
+#grant-dates,
+#grant-contacts {
   .card-divider {
     padding: .5rem 1rem;
   }
@@ -277,8 +279,13 @@ h2#section {
 }
 
 #turbo-table {
-  margin: 2rem 0;
   border: $table-border;
+  .header {
+    .cell {
+      font-size: .85em;
+      margin-bottom: 0em;
+    }
+  }
 
   .columns {
     border-bottom: $table-border;
@@ -286,6 +293,37 @@ h2#section {
   }
 
   .turbo-row:nth-of-type(even) {
-    background-color: #f1f1f1;
+    background-color: #F1F1F1;
+  }
+}
+
+.ts-wrapper {
+  height: 2.4375rem;
+  background-color: #FEFEFE;
+  ::placeholder {
+    color: #000;
+  }
+  &.single {
+    .ts-control {
+      box-shadow: none;
+      background-color: #FEFEFE;
+      background-image: none;
+      border-radius: 0;
+      font-size: 1em;
+    }
+  }
+
+  .ts-dropdown {
+    color: #0A0A0A;
+    font-size: 1em;
+    .ts-dropdown-content {
+      font-family: 'Helvetica Neue', Helvetica, Roboto, Arial, sans-serif;
+    }
+    .active {
+      border: none;
+      background: #F9F9F9;
+      border-radius: 0;
+      color: #0A0A0A;
+    }
   }
 }
