--- a/app/views/grant_permissions/_grant_permission.html.haml
+++ b/app/views/grant_permissions/_grant_permission.html.haml
@@ -2,7 +2,7 @@
 - permission      = grant_permission.role&.capitalize
 - user_full_name  = full_name(user)
 
-= turbo_frame_tag(dom_id(grant_permission)) do
+= turbo_frame_tag(dom_id(grant_permission), class: 'permission') do
   .grid-x.grid-padding-x.grid-padding-y
     .cell.small-12.medium-3
       .name
