WIP: Add ransack search, stimulus controller

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,6 +9,11 @@ main.home {
       display: none;
     }
   }
+
+  input {
+    text-align: center;
+  }
+
   #public-grants {
     padding-top: 1rem;
     .card {
