--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -5,23 +5,23 @@
 
 %hr.small-11
 
-.grid-x.align-center-middle
+.grid-x.align-center-middle{ data: { controller: 'filters'} }
   .small-12.text-center
     .section-intro
       %h3.subheader.text-align-center
         Current Grants
   .small-12.medium-10.large-4
     .text-align-center
-      = search_form_for @q, url: root_path, html: { data: { controller: 'filters', 'turbo-frame': 'grants' } } do |f|
-        = f.search_field :name_cont, data: { action: "filters#submit" }, class: 'small-up-12 medium-up-4', placeholder: 'Search grant titles'
+      %div
+        = text_field_tag 'name_cont', nil, class: 'small-up-12 medium-up-4', placeholder: 'Search grant titles', maxlength: 20, data: { 'filters_target': 'search', action: "keyup->filters#filter" }
 
-= turbo_frame_tag 'grants' do
-  #public-grants.grid-x.grid-padding-x.small-up-1.medium-up-2.large-up-3.align-center-middle
-    - if @grants.present?
-      - @grants.each do |grant|
-        .cell
-          = render 'card', grant: grant
-    - else
-      .small-12.text-center
-        %h5
-          There are no open grants available.
+  #public-grants.small-12
+    .grid-x.grid-padding-x.small-up-1.medium-up-2.large-up-3.align-center-middle
+      - if @grants.present?
+        - @grants.each do |grant|
+          .cell
+            = render 'card', grant: grant
+      - else
+        .small-12.text-center
+          %h5
+            There are no open grants available.
