--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -9,8 +9,18 @@ main.home {
       display: none;
     }
   }
+
+  input {
+    text-align: center;
+  }
+
   #public-grants {
     padding-top: 1rem;
+    .cell {
+      &.filtered {
+        display: none;
+      }
+    }
     .card {
       @include breakpoint(medium) {
         height: 20rem;
