--- a/app/views/panels/_panel_content.html.haml
+++ b/app/views/panels/_panel_content.html.haml
@@ -1,3 +1,8 @@
+-# Set the current_user's permissions on the grant...
+- user_grant_role = current_user.get_role_by_grant(grant: @grant)
+-# and use that role to help w/ some display logic
+- user_has_grant_permissions = user_grant_role.present?
+
 %h4
   Reviewed Submissions
 
@@ -6,44 +11,49 @@
     There are no reviewed submissions for this grant.
 - else
 
-  %table.stackable
-    %caption
-      Below is a list of reviewed, completed submissions.
-    %thead
-      %tr
-        %th{colspan: 3}
-        %th{colspan: 2}
-          Average Scores
-      %tr
-        %th{width: 200}
-          = sort_link(@q, :applicants_last_name, 'Applicants',{}, {title: 'Sort on Applicants'})
-        %th
-          = sort_link(@q, :title, 'Submission')
-        %th{width: 150}
+  %p
+    Below is a list of reviewed, completed submissions.
+
+  #grant-submissions
+    .turbo-table
+      .grid-x.grid-padding-x.align-bottom.header
+        .cell.small-12.medium-2
+          = sort_link(@q, :applicants_last_name, 'Applicants', {}, { title: 'Sort on Applicants' })
+        .cell.small-12.medium-4
+          = sort_link(@q, :title, 'Submission', {}, { title: 'Sort on Submission Title'} )
+        .cell.small-12.medium-1
           Reviews
-        %th{ width: 140 }
+        .cell.small-12.medium-2
           %abbr{ title: 'Sort on Average from Scored Reviews' }
-            = sort_link(@q, :average_overall_impact_score, 'Overall Impact')
-        %th{ width: 130 }
+            = sort_link(@q, :average_overall_impact_score, 'Overall Impact Score')
+        .cell.small-12.medium-2
           %abbr{ title: 'Sort on Average of all Scored Criteria' }
-            = sort_link(@q, :composite_score, 'Composite')
-    %tbody
-    - @submissions.each do |submission|
-      - review_data = review_data(submission)
-      %tr.submission{ data: { submission: submission.id } }
-        %td.submitter{ data: { applicants: submission.applicants.map(&:id.to_proc) } }
-          - submission.applicants.each do |applicant|
-            = link_to sortable_full_name(applicant), grant_submission_path(@grant, submission)
-            %br
-        %td.title{ data: { title: submission.id } }
-          = link_to submission.title, grant_panel_submission_path(@grant, submission)
-        %td.reviews
-          = link_to 'Review'.pluralize(review_data.completed_review_count), grant_panel_submission_reviews_path(@grant, submission)
-          = surround '(', ')' do
-            #{review_data.completed_review_count}
-        %td.overall-impact{ data: { overall: { impact: submission.id } } }
-          %abbr{ title: 'Average Overal Impact Score from Scored Reviews' }
-            = review_data.overall_impact_average
-        %td.composite{ data: { composite: submission.id } }
-          %abbr{ title: 'Average of Scored Criteria' }
-            = review_data.composite_score
+            = sort_link(@q, :composite_score, 'Composite Score')
+        - if user_has_grant_permissions
+          .cell.small-12.medium-1
+            Awarded
+
+      .rows{ data: { controller: 'checkbox-submit' } }
+        - @submissions.each do |submission|
+          - review_data = review_data(submission)
+          = turbo_frame_tag dom_id(submission) do
+            .grid-x.grid-padding-x.grid-padding-y.row
+              .cell.small-12.medium-2.applicants
+                = link_to submission.applicants.map{ |app| "#{sortable_full_name(app)}"}.join('<br/>').html_safe, grant_panel_submission_path(@grant, submission)
+              .cell.small-12.medium-4
+                = link_to submission.title, grant_panel_submission_path(@grant, submission)
+              .cell.small-12.medium-1
+                = link_to 'Review'.pluralize(review_data.completed_review_count), grant_panel_submission_reviews_path(@grant, submission)
+                = surround '(', ')' do
+                  #{review_data.completed_review_count}
+              .cell.small-12.medium-2
+                %abbr{ title: 'Sort on Average from Scored Reviews' }
+                  = review_data.overall_impact_average
+              .cell.small-12.medium-2
+                %abbr{ title: 'Sort on Average of all Scored Criteria' }
+                  = review_data.composite_score
+              - if user_has_grant_permissions
+                .cell.small-12.medium-1.awarded
+                  = turbo_frame_tag "award_#{submission.id}" do
+                    = render partial: 'grant_submissions/submissions/award/award_form', locals: { grant: @grant, submission: submission, user_grant_role: user_grant_role }
+
