--- a/app/views/panels/_panel_content.html.haml
+++ b/app/views/panels/_panel_content.html.haml
@@ -1,12 +1,12 @@
 -# Set the current_user's permissions on the grant...
-- user_grant_role = current_user.get_role_by_grant(grant: @grant)
+- user_grant_role = current_user.get_role_by_grant(grant: grant)
 -# and use that role to help w/ some display logic
 - user_has_grant_permissions = user_grant_role.present?
 
 %h4
   Reviewed Submissions
 
-- if @submissions.none?
+- if submissions.none?
   %p
     There are no reviewed submissions for this grant.
 - else
@@ -18,17 +18,17 @@
     .turbo-table
       .grid-x.grid-padding-x.align-bottom.header
         .cell.small-12.medium-2
-          = sort_link(@q, :applicants_last_name, 'Applicants', {}, { title: 'Sort on Applicants' })
+          = sort_link(query, :applicants_last_name, 'Applicants', {}, { title: 'Sort on Applicants' })
         .cell.small-12.medium-4
-          = sort_link(@q, :title, 'Submission', {}, { title: 'Sort on Submission Title'} )
+          = sort_link(query, :title, 'Submission', {}, { title: 'Sort on Submission Title'} )
         .cell.small-12.medium-1
           Reviews
         .cell.small-12.medium-2
           %abbr{ title: 'Sort on Average from Scored Reviews' }
-            = sort_link(@q, :average_overall_impact_score, 'Overall Impact Score')
+            = sort_link(query, :average_overall_impact_score, 'Overall Impact Score')
         .cell.small-12.medium-2
           %abbr{ title: 'Sort on Average of all Scored Criteria' }
-            = sort_link(@q, :composite_score, 'Composite Score')
+            = sort_link(query, :composite_score, 'Composite Score')
         - if user_has_grant_permissions
           .cell.small-12.medium-1
             Awarded
@@ -39,11 +39,11 @@
           = turbo_frame_tag dom_id(submission) do
             .grid-x.grid-padding-x.grid-padding-y.row
               .cell.small-12.medium-2.applicants
-                = link_to submission.applicants.map{ |app| "#{sortable_full_name(app)}"}.join('<br/>').html_safe, grant_panel_submission_path(@grant, submission)
+                = link_to submission.applicants.map{ |app| "#{sortable_full_name(app)}"}.join('<br/>').html_safe, grant_panel_submission_path(grant, submission)
               .cell.small-12.medium-4
-                = link_to submission.title, grant_panel_submission_path(@grant, submission)
+                = link_to submission.title, grant_panel_submission_path(grant, submission)
               .cell.small-12.medium-1
-                = link_to 'Review'.pluralize(review_data.completed_review_count), grant_panel_submission_reviews_path(@grant, submission)
+                = link_to 'Review'.pluralize(review_data.completed_review_count), grant_panel_submission_reviews_path(grant, submission)
                 = surround '(', ')' do
                   #{review_data.completed_review_count}
               .cell.small-12.medium-2
@@ -55,5 +55,5 @@
               - if user_has_grant_permissions
                 .cell.small-12.medium-1.awarded
                   = turbo_frame_tag "award_#{submission.id}" do
-                    = render partial: 'grant_submissions/submissions/award/award_form', locals: { grant: @grant, submission: submission, user_grant_role: user_grant_role }
+                    = render partial: 'grant_submissions/submissions/award/award_form', locals: { grant: grant, submission: submission, user_grant_role: user_grant_role }
 
