--- a/app/views/panels/_panel_schedule_info.html.haml
+++ b/app/views/panels/_panel_schedule_info.html.haml
@@ -1,22 +1,21 @@
-- if @panel.start_datetime.blank?
-  .callout.primary
+.callout.warning
+  - if @panel.start_datetime.blank?
     %strong
-      Panel is not scheduled
+      Panel is not scheduled.
     %p
       This grant has not scheduled a panel.
-- elsif @panel.is_open?
-  .callout.success
+  - elsif panel.is_open?
     %p
-      This section will be available to reviewers until #{will_close_at_string(panel: @panel)}.
-- elsif @panel.start_datetime > DateTime.now
-  .callout.warning
+      This section will be available to reviewers until #{will_close_at_string(panel: panel)}.
+  - elsif panel.start_datetime > DateTime.now
     %strong
-      Panel has not started
+      Panel has not yet started.
     %p
-      This section will be available to reviewers at #{will_open_at_string(panel: @panel)}.
-- else
-  .callout.alert
+      This section will be available to reviewers at #{will_open_at_string(panel: panel)}.
+  - else
     %strong
-      Panel has ended
+      Panel has ended.
     %p
       This panel has ended and is no longer accessible to reviewers.
+  - if user_has_grant_viewer_access
+    Reviewers will not see Awarded information.
