--- a/app/views/grant_submissions/submissions/index.html.haml
+++ b/app/views/grant_submissions/submissions/index.html.haml
@@ -1,7 +1,4 @@
--# Set the current_user's permissions on the grant...
-- user_grant_role = current_user.get_role_by_grant(grant: @grant)
--# and use that role to help w/ some display logic
-- user_has_grant_permissions = user_grant_role.present?
+- user_has_grant_permissions = @user_grant_role.present?
 -# if user_has_grant_permissions to see reviews, two review columns are displayed.
 -#  otherwise the title column should be adjusted to fill the table
 - submission_title_class = user_has_grant_permissions ? 'medium-3' : 'medium-6'
@@ -86,6 +83,6 @@
 
       .rows{ data: { controller: 'checkbox-submit' } }
         - @submissions.each do |submission|
-          = render partial: 'grant_submissions/submissions/submission', locals: { submission: submission, grant: @grant, user_grant_role: user_grant_role, submission_title_class: submission_title_class, user_has_grant_permissions: user_has_grant_permissions, review_data: review_data(submission) }
+          = render partial: 'grant_submissions/submissions/submission', locals: { submission: submission, grant: @grant, user_grant_role: @user_grant_role, submission_title_class: submission_title_class, user_has_grant_permissions: user_has_grant_permissions, review_data: review_data(submission) }
 
   != pagy_foundation_nav(@pagy)
