--- a/app/views/grant_submissions/submissions/reviews/_form.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/_form.html.haml
@@ -22,3 +22,4 @@
 
   .actions
     = f.submit 'Submit Your Review', class: 'button', disabled: disabled
+    = f.submit 'Save Your Review', class: 'button', disabled: disabled
