--- a/app/views/grant_submissions/submissions/index.html.haml
+++ b/app/views/grant_submissions/submissions/index.html.haml
@@ -79,7 +79,7 @@
             %span{ title: 'Average of scored Criteria - scored first' }
               = sort_link(@q, :composite_score_nulls_last, 'Composite', {}, { title: 'Sort on Composite Score'} )
           .cell.small-12.medium-1
-            Awarded
+            = sort_link(@q, :awarded, 'Awarded', { default_order: :desc }, { title: 'Sort on Awarded' })
 
       .rows{ data: { controller: 'checkbox-submit' } }
         - @submissions.each do |submission|
