Update version number and release notes

--- a/app/views/documentation/release/index.html.haml
+++ b/app/views/documentation/release/index.html.haml
@@ -5,6 +5,22 @@
   #{link_to "GitHub repository", "https://github.com/NUARIG/competitions"}.
 
 %ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
+  %li.accordion-item.is-active{"data-accordion-item" => ""}
+    %a.accordion-title{:href => "#"} 1.18 (May 8, 2022)
+    .accordion-content{"data-tab-content" => ""}
+      %ul
+        %li
+          Award tracking for grant administrators.
+          #{github_issue_link(issue: 1001)}
+        %li
+          Dynamic search of open grants on homepage.
+        %li
+          Add optional grant contact(s). <br/>
+          Inline editing of grant administrators.
+          #{github_issue_link(issue: 979)}
+        %li
+          Minor bug fixes and UI improvements.
+
   %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.17.1 (September 1, 2022)
     .accordion-content{"data-tab-content" => ""}
@@ -14,7 +30,6 @@
             Fix javascript load on reviewers page.
             #{github_issue_link(issue: 975)}
 
-%ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.17 (August 8, 2022)
     .accordion-content{"data-tab-content" => ""}
@@ -77,7 +92,6 @@
             bump rails-html-sanitizer to 1.4.3 #952
             #{github_issue_link(issue: 922)}
 
-%ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.16.1 (April 11, 2022)
     .accordion-content{"data-tab-content" => ""}
@@ -96,7 +110,6 @@
             Update Nokogiri version.
             #{github_issue_link(issue: 927)}
 
-%ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.16 (February 22, 2022)
     .accordion-content{"data-tab-content" => ""}
@@ -139,7 +152,6 @@
             Update Nokogiri version.
             #{github_issue_link(issue: 912)}
 
-%ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.15.2 (February 4, 2022)
     .accordion-content{"data-tab-content" => ""}
@@ -149,7 +161,6 @@
             Add nil checks for error messaging.
             #{github_issue_link(issue: 891)}
 
-%ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.15.1 (February 4, 2022)
     .accordion-content{"data-tab-content" => ""}
@@ -159,7 +170,6 @@
             Add a check for existence of registered user.
             #{github_issue_link(issue: 891)}
 
-%ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.15 (January 26, 2022)
     .accordion-content{"data-tab-content" => ""}
@@ -172,7 +182,6 @@
             Clarify the login page with better error messages and links.
             #{github_issue_link(issue: 885)}
 
-%ul.accordion{"data-accordion" => "", "data-allow-all-closed" => "true", "data-multi-expand" => "false"}
   %li.accordion-item{"data-accordion-item" => ""}
     %a.accordion-title{:href => "#"} 1.14 (October 21, 2021)
     .accordion-content{"data-tab-content" => ""}
