save form action

--- a/app/views/grant_submissions/submissions/reviews/_form.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/_form.html.haml
@@ -5,6 +5,7 @@
     Review period is closed
 
 = form_for (review), url: grant_submission_review_url(grant, submission, review), html: { novalidate: true, data: { abide: '' } }, local: true, data: { turbo: false } do |f|
+  = review.draft
   - if review.criteria_reviews.any?
     %h3
       Review Criteria
