--- a/app/views/grants/criteria/_criterion_fields.html.haml
+++ b/app/views/grants/criteria/_criterion_fields.html.haml
@@ -1,29 +1,27 @@
-- disable_fields = !policy(@grant).update?
-
 .nested-fields
   .field
     .grid-x
       .cell.small-12.medium-2
         = f.label :name
       .cell.small-12.medium-9.medium-offset-1
-        = f.text_field :name, width: 50, required: true, disabled: disable_fields
+        = f.text_field :name, width: 50, required: true, disabled: @disable_fields
   .field
     .grid-x
       .cell.small-12.medium-2
         = f.label :description
       .cell.small-12.medium-9.medium-offset-1
-        = f.text_area :description, width: 50, disabled: disable_fields
+        = f.text_area :description, width: 50, disabled: @disable_fields
   .field
     .grid-x
       .cell.small-12.medium-offset-3
-        = f.check_box :is_mandatory, disabled: disable_fields
+        = f.check_box :is_mandatory, disabled: @disable_fields
         = f.label :is_mandatory
         %br
-        = f.check_box :show_comment_field, disabled: disable_fields
+        = f.check_box :show_comment_field, disabled: @disable_fields
         = f.label :show_comment_field
 
   .field
     .grid-x
-      = link_to_remove_association 'Remove', f, class: 'button tiny hollow alert remove' unless disable_fields
+      = link_to_remove_association 'Remove', f, class: 'button tiny hollow alert remove' unless @disable_fields
 
   %hr
